experiments/09-network-policies/deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: netpol-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: busybox
          image: busybox:stable
          command: ["sleep", "infinity"]
